--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
-  </body>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Mi Primera Página HTML</title>
+</head>
+<body>
+<header>
+<h1>Bienvenido a mi primera página HTML</h1>
+</header>
+<nav>
+<ul>
+<li><a href="#seccion1">Sección 1</a></li>
+<li><a href="#seccion2">Sección 2</a></li>
+</ul>
+</nav>
+<main>
+<section id="seccion1">
+<h2>Sección 1</h2>
+<p>Este es el contenido de la sección 1.</p>
+</section>
+<section id="seccion2">
+<h2>Sección 2</h2>
+<p>Este es el contenido de la sección 2.</p>
+</section>
+</main>
+<footer>
+<p>Copyright &copy; 2023 Mi Nombre</p>
+</footer>
+</body>
 </html>
