--- a/index.html
+++ b/index.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Mi Primera Página HTML</title>
-</head>
-<body>
-<header>
-<h1>Bienvenido a mi primera página HTML</h1>
-</header>
-<nav>
-<ul>
-<li><a href="#seccion1">Sección 1</a></li>
-<li><a href="#seccion2">Sección 2</a></li>
-</ul>
-</nav>
-<main>
-<section id="seccion1">
-<h2>Sección 1</h2>
-<p>Este es el contenido de la sección 1.</p>
-</section>
-<section id="seccion2">
-<h2>Sección 2</h2>
-<p>Este es el contenido de la sección 2.</p>
-</section>
-</main>
-<footer>
-<p>Copyright &copy; 2023 Mi Nombre</p>
-</footer>
-</body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
+  </head>
+  <body>
+    <h1>Mi primera página web</h1>
+    <p>
+      Hola, esta es una pagina web simple que utiliza HTML, CSS y JavaScript de los alumnos de la academia BlockMaker.
+    </p>
+  </body>
 </html>
