--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     <p>
       Hola, esta es una pagina web simple que utiliza HTML, CSS y JavaScript de los alumnos de la academia BlockMaker.
     </p>
+    <button id="myButton">Haz clic aquí</button>
+    <p id="text">
+      Este es un texto que cambiará cuando se haga clic en el botón anterior.
+    </p>
   </body>
 </html>
