creacion de estilos con CSS

--- a/clase_con_ivan.html
+++ b/clase_con_ivan.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
+    <style></style>
   </head>
   <body>
     <h1>Mi primera página web</h1>
