--- a/clase_con_ivan.html
+++ b/clase_con_ivan.html
@@ -16,6 +16,7 @@
         padding: 10px 20px;
         background-color: steelblue;
         color: white;
+        text-decoration: underline;
         border: none;
         border-radius: 5px;
         cursor: pointer;
